Rewrote the change log for 8.0.0 as one-line entries with a detailed companion
The "Upcoming release" section had grown a handful of multi-paragraph entries
while most of the ~950 commits since 7.5.3 were not recorded at all. Since the
first section of CHANGES.md is also the body of the GitHub release page, it is
now kept to one line per item, in the style of the earlier releases, and the
prose moves to CHANGES-8_0_0.md next to it, organised by topic. Both files ship
in the zips, since the whole of release/include does.

The entries were compiled from the commit log since release-7_5_3 and checked
against the code for property, key and option names; issues are listed only
where the log records a fix.